@@ -2,7 +2,6 @@
 <html><head>
 
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" /> <meta content="text/css" http-equiv="Content-Style-Type" /> <link href="human.css" title="Human" type="text/css" rel="stylesheet" /><title>Euskalbar: help</title></head>
-
 <body><h1><img style="vertical-align: -35%;" src="chrome://euskalbar/skin/euskalbar32.png" />&nbsp;Euskalbar</h1>
 
 <table id="nagusia"> <tbody> <tr> <th>Help</th>
@@ -47,7 +46,11 @@ EU&nbsp;‣&nbsp;EN or EN&nbsp;‣&nbsp;EU.</li>
 
 behaviour: reuse tabas and open new tabs in background.</li><li><h3>Skins</h3>Allows
 
-to change the skin for Euskalbar interfaces.</li> <li><h3>Advanced query (Enter, Shift+Enter, Ctrl+Enter)</h3>Allows to select which dictionaries will be shown when performing advanced queries.&nbsp;</li>
+to change the skins for Euskalbar.<br /><br />Apart
+from the default Euskalbar skins, it is posible to use customized
+skins. Euskalbar's website offers several skins. You could also create
+your own skins based on those offered by Euskalbar, if you know how to
+manipulate CSS files.</li><li><h3>GUI</h3>Offers two options to modify Euskalbar's GUI. They can also be modified using shortcuts:<br /><br /></li><ul><li>Ctrl+Alt+H: Shows/hides the dictionaries menu</li><li>Ctrl+Alt+T: Shows/hides the context menu</li></ul><li><h3>Advanced query (Enter, Shift+Enter, Ctrl+Enter)</h3>Allows to select which dictionaries will be shown when performing advanced queries.&nbsp;</li>
 
 <li><h3>Combined
 
