@@ -2,7 +2,6 @@
 <html><head>
 
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" /> <meta content="text/css" http-equiv="Content-Style-Type" /> <link href="human.css" title="Human" type="text/css" rel="stylesheet" /><title>Euskalbar: ayuda</title></head>
-
 <body><h1><img style="vertical-align: -35%;" src="chrome://euskalbar/skin/euskalbar32.png" />&nbsp;Euskalbar</h1>
 
 <table id="nagusia"> <tbody> <tr> <th>Ayuda</th>
@@ -53,7 +52,13 @@ permite reutilizar las pestañas, y abrir las nuevas pestañas en el
 
 fondo.</li><li><h3>Skins</h3>Permite cambiar el
 
-aspecto de las interfaces de Euskalbar.</li> <li><h3>Consulta avanzada (Enter, Shift+Enter, Ctrl+Enter)</h3>Permite seleccionar los diccionarios que
+aspecto de Euskalbar.<br /><br />Además
+de los skins que incorpora Euskalbar por defecto, es posible utilizar
+skins personalizados. El sitio web de Euskalbar ofrece varios skins.
+También es posible crear nuevos skins tomando como base cualquiera de
+los anteriores, siempre que se conozca&nbsp;el formato CSS.</li><li><h3>Interfaz</h3>Ofrece
+dos opciones para modificar la interfaz de Euskalbar: mostrar/esconder
+el menú de diccionarios, y mostrar/esconder el menú contextual.<br /><br />Estas preferencias también pueden ser modificadas usando atajos de teclado:</li><ul><li>Ctrl+Alt+H: Mostrar/esconder el menú de diccionarios</li><li>Ctrl+Alt+T: Mostrar/esconder el menú contextual</li></ul> <li><h3>Consulta avanzada (Enter, Shift+Enter, Ctrl+Enter)</h3>Permite seleccionar los diccionarios que
 
 se mostrarán cuando se realizan consultas avanzadas.</li> <li><h3>Opciones de las consultas
 
