@@ -2,7 +2,6 @@
 <html><head>
 
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" /> <meta content="text/css" http-equiv="Content-Style-Type" /> <link href="human.css" title="Human" type="text/css" rel="stylesheet" /><title>Euskalbar: laguntza</title></head>
-
 <body><h1><img style="vertical-align: -35%;" src="chrome://euskalbar/skin/euskalbar32.png" />&nbsp;Euskalbar</h1>
 
 <table id="nagusia"> <tbody> <tr> <th>Laguntza</th>
@@ -55,9 +54,15 @@ hobespenak</h3>Fitxen portaera ezartzen dituzten aukerak: fitxak
 
 berrerabiltzeko aukera, eta fitxak atzeko planoan irekitzeko aukera.</li>
 
-<li><h3>Azalak</h3>Euskalbarren interfazeen azalak
+<li><h3>Azalak</h3>Euskalbarren itxura
 
-aldatzea ahalbidetzen du.</li><li><h3>Kontsulta
+aldatzea ahalbidetzen du.<br /><br />Euskalbarrek
+berez dauzkan azalez gain, azal pertsonalizatuak ere erabil daitezke.
+Euskalbarren webgunetik hainbat azal deskarga daitezke. Bestalde, azal
+horiek oinarritzat hartuz edozeinek sor ditzake azal berriak, CSS
+formatua ezagutuz gero.</li><li><h3>Interfazea</h3>Euskalbarren
+interfazea aldatzeko bi aukera eskaintzen ditu: hiztegien menua
+erakutsi/ezkutatzea, eta testuinguru-menua erakutsi/ezkutatzea.<br /><br />Hobespen hauek laster-teklak erabiliz ere alda daitezke:</li><ul><li>Ktrl+Alt+H: Hiztegien menua erakutsi/ezkutatu</li><li>Ktrl+Alt+T: Testuinguru-menua erakutsi/ezkutatu</li></ul><li><h3>Kontsulta
 
 aurreratua (Enter, Shift+Enter, Ktrl+Enter)</h3>Kontsulta
 
