@@ -10,6 +10,8 @@
 - Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
 - Bilaketa konbinatuetan Hiztegi Batuaren azpisarrerak kontsultatzeko aukera gehitu da. (#40) 
 - Hiztegien menua erakutsi/ezkutatzeko hobespena hobespenen leihoan integratu da. (#49)
+- Testuinguru-menua erakutsi/ezkutatzeko hobespena sortu da. (#48)
+- Laster-teklak sortu dira hiztegien menua eta testuinguru-menua erakutsi/ezkutatzeko. (#44)
 - Euskalterm-en bilaketak egitean, hitz baten hasiera kontsultatzen bada, hitz amaieran "*" komodina idatzi balitz bezala funtzionatzen du. (#60)
 
 
